fix: center alignment of search icon on suggestions modal of homepage

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -57,6 +57,7 @@
             padding: var(--space-1);
 
             &__svg {
+              display: block;
               height: 2.6rem;
               width: 2.6rem;
               fill: rgba(var(--color-primary-light-rgb), 1);
